# rtb-software

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  LICENSE  README.md  rtb-software.ioc  rtb-software.txt  rtb-software.xml  st_nucleo_l4.cfg
Core/Inc/: can.h  characterisation.h  experiments.h  lcl.h  main.h  mram.h  parameters.h  shift_register.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: adc.c  adc.h  can.c  characterisation.c  experiments.c  lcl.c  main.c  mram.c  parameters.c  shift_register.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Interface/: Beep.cpp  Beep.h  CAN.cpp  CAN.h  CMakeLists.txt  CSV.cpp  CSV.h  Clock.cpp  Clock.h  CommonEnums.h  ConsumptionChecker.cpp  ConsumptionChecker.h  Experiment.cpp  Experiment.h  FontAwesome.h  Latchups.cpp  Latchups.h  Log.cpp  Log.h  MRAM.cpp  MRAM.h  Measurement.cpp  Measurement.h  Parameters.cpp  Parameters.h  PowerCycles.cpp  PowerCycles.h  README.md  SerialHandler.cpp  SerialHandler.h  Settings.cpp  Settings.h  Utilities.cpp  Utilities.h  main.cpp  main.h
Interface/lib/: CMakeLists.txt  imgui_coloured.cpp  imgui_coloured.h
Interface/tests/: LCG.cpp  characterisation.py
lib/log.c/src/: log.c  log.h
